# BlazeEngine

./: BlazeEngine.csproj  BlazeEngine.sln
BlazeBootstrap/: BlazeBootstrap.csproj  Program.cs
BlazeEngine/: BlazeEngine.csproj
BlazeEngine/Source/: Application.cs  BlazeObject.cs  Core.cs  Debug.cs  Random.cs  Time.cs  WindowInstance.cs  YAML.cs
BlazeEngine/Source/Game/: Game.cs
BlazeEngine/Source/Graphics/: Camera.cs  Graphics.cs
BlazeEngine/Source/Input/: Input.cs
BlazeEngine/Source/Resources/: Cms.cs  Image.cs  Resources.cs
BlazeEngine/Source/Scripting/: ScriptCore.cs
BlazeEngine/Source/Structs/: Seq.cs  Vec2.cs  Vec2Bool.cs  Vec2Int.cs
BlazeEngine/Source/UI/: UI.cs
BlazeEngine/Source/Utils/: Utils.cs
BlazeEnvironment/: BlazeEnvironment.csproj  CmsWindow.cs  EnvironmentPrefsWindow.cs  ImGuiBindings.cs  Program.cs  ProjectBuildWindow.cs  ProjectCreateDialog.cs  ProjectInfoSystem.cs  ProjectOpenDialog.cs
ImguiCMake/: CMakeLists.txt  imgui.h  imgui_exports.cpp
Source/: Application.cs  Debug.cs  Program.cs  Time.cs  Window.cs
Source/Game/: Game.cs
Source/Graphics/: Camera.cs  Graphics.cs
Source/Math/: Mathf.cs
Source/Physics/: Physics.cs
Source/Scripting/: ScriptCore.cs
Source/Structs/: Color.cs  Rect.cs  RectInt.cs  Vec2.cs  Vec2Int.cs
